# ApexTelemetry-for-GT

./: .env.example  .gitignore  README.md  README.zh-CN.md
.github/workflows/: pages.yml
backend/: Cargo.toml
backend/src/: app.rs  constants.rs  demo.rs  lib.rs  main.rs  net.rs  recording.rs  telemetry.rs  utils.rs
backend/src/buffers/: mod.rs
backend/src/http/: mod.rs  types.rs
backend/src/meta/: detector.rs  geometry.rs  mod.rs  store.rs
backend/src/model/: mod.rs  sample.rs
backend/src/parser/: mod.rs
backend/src/tasks/: mod.rs
backend/src/udp/: mod.rs
backend/src/ws/: mod.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/demo/: demo_race.json  demo_race.meta.json
frontend/src/: App.css  App.tsx  TrackMap.tsx
frontend/src/demo/: types.ts  wasm.ts
frontend/src/i18n/: en.json  index.ts  ja.json  zh-CN.json  zh-TW.json
frontend/src/tabs/debug/: DebugTab.tsx
frontend/src/tabs/dynamics/: DynamicsTab.tsx
frontend/src/tabs/race/: RaceTab.tsx  gauges.ts
frontend/src/tabs/settings/: SettingsTab.tsx
frontend/src/tabs/tires/: TiresTab.tsx
frontend/src/types/: api.ts  index.ts  telemetry.ts  ui.ts  ws.ts
frontend/src/utils/: format.ts  units.ts
frontend/src/wasm/: telemetry_wasm.d.ts
scripts/: fetch_gt7tracks_dumps.sh  record_demo.sh  verify_udp_mac_linux.sh  verify_udp_windows.ps1
telemetry-core/: Cargo.toml
telemetry-core/src/: crypto.rs  lib.rs  packet.rs  session.rs
telemetry-core/src/model/: frame.rs  mod.rs  state.rs
telemetry-wasm/: Cargo.toml
telemetry-wasm/src/: lib.rs
