[package]
name = "apextelemetry-for-gt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
bytes = "1"
tokio-util = "0.7"
futures = "0.3"
salsa20 = "0.10"
if-addrs = "0.10"
